--- a/Junk Drawer/View/Base.lproj/LaunchScreen.storyboard
+++ b/Junk Drawer/View/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina5_9" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,33 +15,38 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                    <view key="view" contentMode="scaleAspectFill" id="Ze5-6b-2t3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="2oz-Bo-6ex">
-                                <rect key="frame" x="0.0" y="259" width="375" height="294"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="Ks9-eD-nsc"/>
-                                    <constraint firstAttribute="height" constant="294" id="cbF-KI-0N8"/>
-                                    <constraint firstAttribute="width" secondItem="2oz-Bo-6ex" secondAttribute="height" multiplier="125:98" id="dMM-gO-UFc"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="hgz-9T-0M9">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Logo-new" translatesAutoresizingMaskIntoConstraints="NO" id="2oz-Bo-6ex">
+                                <rect key="frame" x="32" y="365" width="350" height="166"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="customGray"/>
                         <constraints>
-                            <constraint firstItem="2oz-Bo-6ex" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="SVd-eD-sj9"/>
-                            <constraint firstItem="2oz-Bo-6ex" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="XP8-6e-daB"/>
+                            <constraint firstAttribute="bottom" secondItem="hgz-9T-0M9" secondAttribute="bottom" id="0oP-Vc-jMk"/>
+                            <constraint firstItem="hgz-9T-0M9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Phk-P4-6ge"/>
+                            <constraint firstItem="hgz-9T-0M9" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="TWs-kr-zkB"/>
+                            <constraint firstItem="hgz-9T-0M9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zdi-IP-9VE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.6305418719212"/>
+            <point key="canvasLocation" x="50.724637681159422" y="374.33035714285711"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="149.27999877929688" height="106.55999755859375"/>
+        <image name="Logo-new" width="380.33334350585938" height="166.33332824707031"/>
+        <image name="gradient" width="33.333332061767578" height="33.333332061767578"/>
+        <namedColor name="customGray">
+            <color red="0.37647058823529411" green="0.39215686274509803" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
