--- a/Junk Drawer/View/Base.lproj/Main.storyboard
+++ b/Junk Drawer/View/Base.lproj/Main.storyboard
@@ -375,35 +375,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqs-e7-LGh">
-                                <rect key="frame" x="30" y="153" width="37" height="23"/>
+                                <rect key="frame" x="30" y="101" width="37" height="23"/>
                                 <color key="tintColor" name="customBlack"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3U-FC-Ld0">
-                                <rect key="frame" x="30" y="260" width="53" height="23"/>
+                                <rect key="frame" x="30" y="208" width="53" height="23"/>
                                 <color key="tintColor" name="customBlack"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkL-wd-u7M">
-                                <rect key="frame" x="30" y="232" width="18" height="23"/>
+                                <rect key="frame" x="30" y="180" width="18" height="23"/>
                                 <color key="tintColor" name="customGray"/>
                                 <fontDescription key="fontDescription" type="italicSystem" pointSize="19"/>
                                 <color key="textColor" name="customGray"/>
                                 <color key="highlightedColor" name="customGray"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jnv-e8-MRk">
-                                <rect key="frame" x="30" y="318" width="73" height="23"/>
+                                <rect key="frame" x="30" y="266" width="73" height="23"/>
                                 <color key="tintColor" name="customBlack"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OqW-rb-eF3">
-                                <rect key="frame" x="249" y="318" width="82" height="23"/>
+                                <rect key="frame" x="249" y="266" width="82" height="23"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" name="customBlack"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="19"/>
@@ -417,7 +417,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I5f-Em-pKK">
-                                <rect key="frame" x="282" y="376" width="51" height="31"/>
+                                <rect key="frame" x="282" y="324" width="51" height="31"/>
                                 <color key="tintColor" red="0.41168129279999999" green="0.72955508830000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="onTintColor" red="0.41168129279999999" green="0.72955508830000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="thumbTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -426,30 +426,30 @@
                                 </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clp-eA-zKG">
-                                <rect key="frame" x="29" y="386" width="0.0" height="0.0"/>
+                                <rect key="frame" x="29" y="334" width="0.0" height="52"/>
                                 <color key="tintColor" name="customBlack"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Background Color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQ0-HQ-AsX">
-                                <rect key="frame" x="30" y="200" width="153" height="24"/>
+                                <rect key="frame" x="30" y="148" width="153" height="24"/>
                                 <color key="tintColor" name="customBlack"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="la6-3I-nyd">
-                                <rect key="frame" x="207" y="194" width="140" height="31"/>
+                                <rect key="frame" x="207" y="142" width="140" height="31"/>
                             </slider>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Does this item expire? " textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cl9-ws-Ots">
-                                <rect key="frame" x="29" y="376" width="245" height="42"/>
+                                <rect key="frame" x="29" y="324" width="245" height="42"/>
                                 <color key="backgroundColor" name="customWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Rz-OV-b7Y">
-                                <rect key="frame" x="125" y="257" width="220" height="28"/>
+                                <rect key="frame" x="125" y="205" width="220" height="28"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Click to select an image" image="success.png">
@@ -462,20 +462,20 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zwc-2h-0lt">
-                                <rect key="frame" x="29" y="473" width="301" height="104"/>
+                                <rect key="frame" x="29" y="421" width="301" height="156"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgP-Wt-l81">
-                                <rect key="frame" x="29" y="442" width="98" height="23"/>
+                                <rect key="frame" x="29" y="390" width="98" height="23"/>
                                 <color key="tintColor" name="customBlack"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJo-DO-OHI">
-                                <rect key="frame" x="209" y="155" width="102" height="21"/>
+                                <rect key="frame" x="209" y="103" width="102" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1011,6 +1011,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="fSo-jQ-0CH"/>
         <segue reference="bFV-Fz-SMd"/>
-        <segue reference="e5u-pW-oQE"/>
+        <segue reference="wLO-gz-GYv"/>
     </inferredMetricsTieBreakers>
 </document>
